--- a/text/tex/appendix.tex
+++ b/text/tex/appendix.tex
@@ -1,6 +1,26 @@
-%\chapter{Obsah CD}
-%\chapter{Manual}
-%\chapter{Konfigrační soubor}
-%\chapter{RelaxNG Schéma konfiguračního soboru}
-%\chapter{Plakat}
+%=========================================================================
+%=========================================================================
+\chapter{DVD Contents}
 
+%=========================================================================
+%=========================================================================
+\chapter{Usage of the OLS}
+- mozna pridat jeste Building, Running, nebo to dat az do readme.txt
+
+%=========================================================================
+%=========================================================================
+\chapter{Paper - Excel@FIT 2016}
+
+\includepdf[pages={1,2,3,4,5,6,7,8}, offset=50 -45]{appendix/2016-ExcelFIT-paper.pdf}
+
+%=========================================================================
+%=========================================================================
+\chapter{Poster - Excel@FIT 2016}
+
+\begin{figure}[htp] 
+	\centering {
+		\vspace*{-1.5cm}
+		\hspace*{-2.2cm}
+		\includegraphics[scale=0.32]{appendix/2016-ExcelFIT-poster.pdf}
+	}
+\end{figure}
