--- a/text/tex/content.tex
+++ b/text/tex/content.tex
@@ -1176,7 +1176,7 @@ The \textit{position estimation} node continuously receives the measurements fro
 
 %.........................................................................
 %.........................................................................
-\subsection{User Interface}
+\subsection{User Interface} \label{txt:user_interface}
 
 The \gls{ols} do not provide a single integrated graphical user interface. Contrarily, the user interface is composed of multiple windows, each having a different purpose (see Figure \ref{fig:gui}). The \textit{camera\_stream} window which is opened for each CU displays the image stream from corresponding camera and allows the user to select the target of interest (by drawing a bounding box). Furthermore, it displays the progress of tracking and estimated information about the tracked target. The \textit{rviz} window displays the 3D visualization of all CUs and back-projected rays and the \textit{maps} window displays the position and orientation of all CUs and the localized target.
 
