Fixed grammaer, typose, etc. using prof. Herout's suggestions.

--- a/text/tex/bibliography.bib
+++ b/text/tex/bibliography.bib
@@ -859,3 +859,16 @@
 	year={1997},
 	publisher={University Science Books}
 }
+
+@article{marquardt:1963,
+	author = {Marquardt, Donald W.},
+	doi = {10.1137/0111030},
+	journal = {SIAM Journal on Applied Mathematics},
+	keywords = {inversion mathematics},
+	number = 2,
+	pages = {431--441},
+	publisher = {SIAM},
+	title = {An algorithm for least-squares estimation of nonlinear parameters},
+	volume = 11,
+	year = 1963
+}
