--- a/text/tex/glossary.tex
+++ b/text/tex/glossary.tex
@@ -43,6 +43,11 @@
 	description={sum of square differences}
 }
 
+\newglossaryentry{ncc}{
+	name=NCC,
+	description={normalized cross-correlation}
+}
+
 \newglossaryentry{fm}{
 	name=FM,
 	description={foreground mask}
