More fixes according to Martina's suggestions.

--- a/text/tex/content.tex
+++ b/text/tex/content.tex
@@ -19,11 +19,11 @@ In case of the \gls{atc}, the airports mainly rely on the multilateration system
 
 In the military segment the object localization mainly serves the purpose of the early threat detection where it is necessary to identify and track the intruder which might pose a threat for a given area under protection. In this scenario only primary radars are used since the objects of interest are not expected to cooperate.
 
-Besides the ATC and the national defense there are quite a lot other use cases where the autonomous localization systems are or could be employed. The road traffic security is one of such examples. The localization systems can be used by the police to measure the speed of vehicles and prospectively to pinpoint the exact locations where the speeding occurred. Autonomous traffic analysis is another well suited application for localization systems as the main requirement estimate the tracks of given vehicles with regards to the underlying geographical map.
+Besides the ATC and the national defense there are quite a lot other use cases where the autonomous localization systems are or could be employed. The road traffic security is one of such examples. The localization systems can be used by the police to measure the speed of vehicles and prospectively to pinpoint the exact locations where the speeding occurred. Autonomous traffic analysis is another well suited application for localization systems as the main requirement is to estimate the tracks of given vehicles with regards to the underlying geographical map.
 
-Even though being widely used, radar based localization systems suffer from several drawbacks. Radar is a device based on the active emission of the radio signal \cite{toomay2012radar}. In order to localize distant objects, a huge amount of energy must be radiated to make sure it would return from the target and a small amount of energy returned might be easily disrupted \cite{Airtrafficmuseum}. What is more, in defense applications it is not desirable that the tracked object would find out that it is being tracked, which is the condition an actively radiating system, such as a radar, cannot achieve. Last but not least, the professional class radars in use by both public segment and military are in general expensive, large and heavy devices not suitable for mobile deployment.
+Even though being widely used, radar based localization systems suffer from several drawbacks. Radar is a device based on the active emission of the radio signal \cite{toomay2012radar}. In order to localize distant objects, a huge amount of energy must be radiated to make sure it would return from the target and a small amount of energy returned might be easily disrupted \cite{Airtrafficmuseum}. What is more, in defense applications it is not desirable that the tracked object would find out that it is being tracked, which is the condition actively radiating systems, such as radars, cannot achieve. Last but not least, the professional class radars in use by both public segment and military are in general expensive, large and heavy devices not suitable for mobile deployment.
 
-This work presents a semi-autonomous passive multi-camera system for tracking and localizing arbitrary objects --- the Optical Localization System (\gls{ols}) --- which is based merely on ordinary RGB cameras. Since the system does not rely on active emission of a signal but rather captures the optical information from the environment, it can be used for secret localization of moving targets. The system is designed to be well suited for mobility and temporary deployment since each camera station used weigh no more than twenty kilograms and the whole system is inexpensive by comparison to radars as well.
+This work presents a semi-autonomous passive multi-camera system for tracking and localizing arbitrary objects --- the Optical Localization System (\gls{ols}) --- which is based merely on ordinary RGB cameras. Since the system does not rely on active emission of a signal but rather captures the optical information from the environment, it can be used for secret localization of moving targets. The system is designed to be well suited for mobility and temporary deployment since each camera station weighs no more than twenty kilograms and the whole system is inexpensive by comparison to radars.
 
 The principle of the optical localization of objects, which is based on triangulation, is well known for quite a long time. The first devices which were designed to allow an operator to estimate a distance to a given object using mechanical and optical principles --- optical range finders --- emerged in the second half of the 18th century \cite{bud1998instruments}. Ever since, the optical range finders had been mostly used for military operations in order to estimate the position of either naval, airborne or terrestrial targets until the World War II when radar was invented.
 
@@ -934,7 +934,7 @@ As was explained in Section \ref{txt:3d_environment_reconstruction}, if the 3D m
 
 Since the software tool VisualSFM (see Section \ref{txt:visual_sfm}) integrates the state-of-the-art approaches to 3D reconstruction its suitability for the OLS was tested. Even though it produces high-quality results in the scenarios where large amount of images with overlapping FOVs are provided (tens or hundreds of photographs), with just a few views (two to four) --- which is the case of the OLS --- the visual reconstruction performs rather unsatisfactorily.
 
-The VisualSFM was tested with the task to reconstruct a couple of artificial environments created within the simulator Gazebo (see Section \ref{txt:application_of_gazebo}). The Figure \ref{fig:3d_reconstrcion_2vs4cus} demonstrates the comparison of reconstruction output based on two and four views. It can be seen that using mere two views results in imprecise estimates with sever noise while four views provide more reasonable results. Nevertheless, in both cases the relative positions and orientations of the cameras were not estimated correctly, hence the resulting model was wrongly positioned with regards to the ground truth position.
+The VisualSFM was tested with the task to reconstruct a couple of artificial environments created within the simulator Gazebo (see Section \ref{txt:application_of_gazebo}). The Figure \ref{fig:3d_reconstrcion_2vs4cus} demonstrates the comparison of reconstruction output based on two and four views. It can be seen that using mere two views results in imprecise estimates with severe noise while four views provide more reasonable results. Nevertheless, in both cases the relative positions and orientations of the cameras were not estimated correctly, hence the resulting model was wrongly positioned with regards to the ground truth position.
 
 Unfortunately, the VisualSFM does not provide the option to set a priori known information about the intrinsics and extrinsics of each camera which are known in the OLS and which could help initialize the reprojection error optimization algorithm used by the bundle adjustment (see Section \ref{txt:bundle_adjustment}) so as to start near the (possibly) global minimum.
 
@@ -1426,4 +1426,4 @@ The \gls{ols} was implemented in C++ within the framework ROS and simulator Gaze
 As for the further development the tracking algorithm should be investigated so that it would perform well even with cluttered background and more thorough stationing and rectification should be accomplished. Furthermore, automatic detection and possibly classification of moving targets could be implemented and the approach 
 to handoff the target among separate CUs should be proposed to make the \gls{ols} fully autonomous.
 
-The work was conducted in collaboration with consortium of companies RCE systems s.r.o\footnote{The official website of RCE systems s.r.o: \url{http://www.rcesystems.cz/}}., Oprox a.s.\footnote{The official website of company Oprox a.s.: \url{http://www.oprox.cz/}} and the Department of Measurement at Faculty of Electrical Engineering, Czech Technical University in Prague\footnote{The official website of Department of Measurement, FEL, ČVUT: \url{http://measure.fel.cvut.cz}} as a real world application. The development will continue so that a standalone solution could be produced to potential customers.
+The work was conducted in collaboration with consortium of companies RCE systems s.r.o\footnote{The official website of RCE systems s.r.o: \url{http://www.rcesystems.cz/}}. and Oprox a.s.\footnote{The official website of company Oprox a.s.: \url{http://www.oprox.cz/}} and with the Department of Measurement at Faculty of Electrical Engineering, Czech Technical University in Prague\footnote{The official website of Department of Measurement, FEL, ČVUT: \url{http://measure.fel.cvut.cz}} as a real world application. The development will continue so that a standalone solution could be produced to potential customers.
