--- a/text/tex/OpticalLocalization_BednarikJan.tex
+++ b/text/tex/OpticalLocalization_BednarikJan.tex
@@ -171,12 +171,12 @@
 
 %Abstrakt (cesky, slovensky ci anglicky)
 \abstract[cs]
-{Tato práce představuje semiautonomní systém pro optickou lokalizaci velmi vzdálených pohyblivých cílů za pomocí několika P\&T kamer. Kamery byly kalibrovány a zastaničeny pomocí speciálně navržených kalibračních terčů a metodologie, jejímž účelem je minimalizovat hlavní zdroje chyb, jež byly objeveny během důkladné analýzy přesnosti. Detekce cíle probíhá manuálně, zatímco vizuální sledování je automatické a staví na dvou state-of-the-art přístupech. Odhad 3D lokace cíle je založen na triangulaci z N pohledů pracující s nepřesnými měřeními. Základní sestava o dvou kamerových jednotkách byla otestována na statických cílech a pohybujícím se pozemním cíli, přičemž byla přesnost odhadu lokace cíle porovnána s teoretickým modelem. Díky modularitě a přenosnosti je možné systém nasadit v široké škále situací, jako je například monitoring vytyčeného území, včasná detekce hrozby v bezpečnostních systémech nebo řízení vzdušeného provozu.}
+{Tato práce představuje semiautonomní systém pro optickou lokalizaci velmi vzdálených pohyblivých cílů za pomocí několika P\&T kamer. Kamery byly kalibrovány a zastaničeny pomocí speciálně navržených kalibračních terčů a metodologie, jejímž účelem je minimalizovat hlavní zdroje chyb, jež byly objeveny během důkladné analýzy přesnosti. Detekce cíle probíhá manuálně, zatímco vizuální sledování je automatické a staví na dvou state-of-the-art přístupech. Odhad 3D lokace cíle je založen na triangulaci z N pohledů pracující s nepřesnými měřeními. Základní sestava o dvou kamerových jednotkách byla otestována na statických cílech a pohybujícím se pozemním cíli, přičemž byla přesnost odhadu lokace cíle porovnána s teoretickým modelem. Díky modularitě a přenosnosti je možné systém použít v široké škále situací, jako je například monitoring vytyčeného území, včasná detekce hrozby v bezpečnostních systémech nebo řízení vzdušeného provozu.}
 \abstract[en]
-{This work presents a system for semi-autonomous optical localization of distant moving targets using multiple P\&T cameras. The cameras were calibrated and stationed using custom designed calibration targets and methodology with the objective to alleviate the main sources of error which were pinpointed in thorough precision analysis. The detection of the target is performed manually, while the visual tracking is automatic and builds on two state-of-the-art approaches. The estimation of the location in three-space is based on the N-view triangulation working with noisy measurements. A basic setup consisting of two camera units was tested against static targets and a moving terrestrial target, and the location estimation precision was compared to the theoretical model. The modularity and portability of the system allows fast deployment in a wide range of scenarios including perimeter monitoring or early threat detection in defense systems, as well as air traffic control in public space.}
+{This work presents a system for semi-autonomous optical localization of distant moving targets using multiple P\&T cameras. The cameras were calibrated and stationed using custom designed calibration targets and methodology with the objective to alleviate the main sources of errors which were pinpointed in thorough precision analysis. The detection of the target is performed manually, while the visual tracking is automatic it utilizes two state-of-the-art approaches. The estimation of the location in three-space is based on the N-view triangulation working with noisy measurements. A basic setup consisting of two camera units was tested against static targets and a moving terrestrial target, and the location estimation precision was compared to the theoretical model. The modularity and portability of the system allows fast deployment in a wide range of scenarios including perimeter monitoring or early threat detection in defense systems, as well as air traffic control in public space.}
 
 %Klicova slova (cesky, slovensky ci anglicky)
-\keywords[cs]{optická lokalizace, lokalizace více kamerami, stereovize, detekce objektů, sledování objektů, triangulace, odhadh pohybu, UAV, fyzikální simuace, ROS, Gazebo, kinematický řetězec, rektifikace kamery}
+\keywords[cs]{optická lokalizace, lokalizace více kamerami, stereovize, detekce objektů, sledování objektů, triangulace, odhad pohybu, UAV, fyzikální simulace, ROS, Gazebo, kinematický řetězec, rektifikace kamery}
 \keywords[en]{optical localization, mutli camera localization, stereovision, object detection, object tracking, triangulation, motion prediction, UAV, physical simulation, ROS, Gazebo, kinematic chain, camera rectification}
 
 %Prohlaseni (u anglicky psane prace anglicky, u slovensky psane prace slovensky)
