Fixed more errors according to the 1st part of Flo's suggestions.

--- a/text/tex/content.tex
+++ b/text/tex/content.tex
@@ -55,7 +55,7 @@ This section discusses the various approaches to tracking of objects using compu
 %.........................................................................
 \subsection{Object Model} \label{txt:object_model}
 
-The choice of how the targets are represented determines the domain of approaches used for visual tracking due to the strong relationship between the algorithm and the object model. Neither of the state-of-the-art approaches is universal enough to cope with all the difficulties and disturbances, such as the illumination change, occlusion, cluttered background, motion blurring or appearance change due to deformation and/or transformation of the object \cite{Li:2013:SAM:2508037.2508039} which might occur over the course of tracking. Therefore, the model should suit a~priori known tracking conditions (e.g. size, speed, rigidity and motion model of the target, number of targets, camera motion, background model, etc.). Yilmaz et al. classified the model representations into two categories in their review \cite{Yilmaz:2006:OTS:1177352.1177355} -- the \textit{shape} and the \textit{appearance}. 
+The choice of how the targets are represented determines the domain of approaches used for visual tracking due to the strong relationship between the algorithm and the object model. Neither of the state-of-the-art approaches is universal enough to cope with all the difficulties and disturbances, such as the illumination change, occlusion, cluttered background, motion blurring or appearance change due to deformation and/or transformation of the object \cite{Li:2013:SAM:2508037.2508039} which might occur over the course of tracking. Therefore, the model should suit a~priori known tracking conditions (e.g. size, speed, rigidity and motion model of the target, number of targets, camera motion, background model, etc.). Yilmaz et al. classified the model representations in two categories in their review \cite{Yilmaz:2006:OTS:1177352.1177355} -- the \textit{shape} and the \textit{appearance}. 
 
 %Beyond these two classes, a few categories of widely used image features can be distinguished, e.g. \textit{gradient, texture or spatio-temporal features}, with some of them being specifically developed for tracking certain classes of objects, such as pedestrians or cars \cite{Yang20113823}.
 
@@ -170,7 +170,7 @@ The particle filter represents the most general class of filters which can cope 
 
 The Tracking Learning Detection (TLD) \cite{Kalal:2012:TRA:2225045.2225082} is an algorithm designed for performing so called long-term tracking -- a robust tracking of an object which might change its appearance, be temporarily occluded by closer objects or temporarily completely disappear from the scene. TLD is based on the appearance representation of the target, specifically a set of templates is stored and continuously updated. Additionally, TLD can be implemented to run in real-time. Such properties meet the requirements of the \gls{ols} (see Section \ref{txt:introduction}), thus TLD is incorporated in \gls{ols} as one of the visual trackers and this section explains its design in more detail.
 
-Since long-term tracking cannot be easily achieved either by a mere tracker nor by a detector, the TLD aims to combine the strengths of the detection and tracking algorithms by combining their results. Furthermore, the algorithm incorporates an online adaptation subsystem capable of learning the new appearances of the tracked object over the course of the tracking.
+Since long-term tracking cannot be easily achieved either by a mere tracker or by a detector, the TLD aims to combine the strengths of the detection and tracking algorithms by combining their results. Furthermore, the algorithm incorporates an online adaptation subsystem capable of learning the new appearances of the tracked object over the course of the tracking.
 
 A conceptual diagram of the TLD algorithm is shown in Figure \ref{fig:tld_block_diagram}. The \textit{tracking} component tracks the object and for each frame it produces the new position. It expects that object does not disappear (occlusion, out of \gls{fov}) from the scene and if it does, the tracker fails. The \textit{detection} component performs full scanning of the image for each frame. It detects the object and if needed it reinitializes the tracker. The \textit{learning} component is capable of generating new appearances of the tracked object and thus improving the performance of the detector. 
 
@@ -534,7 +534,7 @@ The Figure \ref{fig:errorMapGivenTargetPosition} depicts the position estimation
 %-------------------------------------------------------------------------
 \section{Stationing} \label{txt:stationing}
 
-The main purpose of the \textit{stationing} process is to find the positions and orientations of all CUs with regards to the global (world) coordinate system. The stationing consists of four subtasks: finding the global position (using \gls{dgps} sensor), ensuring horizontality, finding absolute heading\footnote{\textit{Heading} is the term used to describe the angle between the torso of the human body and the geographical north \cite{Henriksson648760}.} and finding relative heading. Great care should be taken when performing stationing since imprecise estimates of the position and/orientation are the main source of the systematic error which significantly impacts the overall localization precision of the system.
+The main purpose of the \textit{stationing} process is to find the positions and orientations of all CUs with regards to the global (world) coordinate system. The stationing consists of four subtasks: finding the global position (using \gls{dgps} sensor), ensuring horizontality, finding absolute heading\footnote{\textit{Heading} is the term used to describe the angle between the torso of the human body and the geographical north \cite{Henriksson648760}.} and finding relative heading. Great care should be taken when performing stationing since imprecise estimates of the position and orientation are the main source of the systematic error which significantly impacts the overall localization precision of the system.
 
 %.........................................................................
 %.........................................................................
@@ -698,7 +698,7 @@ The CU (see Figure \ref{fig:camera_unit_photo_model}) consists of a surveying tr
 	\label{fig:camera_unit_photo_model}
 \end{figure}
 
-\paragraph{Manipulator Flir PTU-D46-70} A manipulator PTU D46-70\footnote{Website of the product Flir PTU-D46-70: \url{http://www.flir.com/mcs/view/?id=53712}} produced by manufacturer Flir is used (see Figure \ref{fig:prosilica_gt1290c_flir_ptud4670}). As compared to the other professional manipulators this is a lower middle class device consisting of two stepper motors (pan and tilt axes). The device is capable of maximal angular speed of $60^{\circ}/s$ with the resolution of $0.003^{\circ}$ while the payload must not exceed $4.08~kg$ \cite{Flir_ptud4670}. The operational range is limited to $[-180^{\circ}, 180^{\circ}]$ in azimuth and $[-47^{\circ}, 80^{\circ}]$ in elevation. The manipulator incorporates no position feedback, the position is inferred from the number of steps and the current resolution, thus it is necessary not to overload the manipulator, otherwise it could loose synchrony and report wrong position.
+\paragraph{Manipulator Flir PTU-D46-70} A manipulator PTU D46-70\footnote{Website of the product Flir PTU-D46-70: \url{http://www.flir.com/mcs/view/?id=53712}} produced by manufacturer Flir is used (see Figure \ref{fig:prosilica_gt1290c_flir_ptud4670}). As compared to the other professional manipulators this is a lower middle class device consisting of two stepper motors (pan and tilt axes). The device is capable of maximal angular speed of $60^{\circ}/s$ with the resolution of $0.003^{\circ}$ while the payload must not exceed $4.08~kg$ \cite{Flir_ptud4670}. The operational range is limited to $[-180^{\circ}, 180^{\circ}]$ in azimuth and $[-47^{\circ}, 80^{\circ}]$ in elevation. The manipulator incorporates no position feedback, the position is inferred from the number of steps and the current resolution, thus it is necessary not to overload the manipulator, otherwise it could lose synchrony and report wrong position.
 
 \paragraph{Camera Prosilica GT 1290C} Prosilica GT 1290C\footnote{Website of the product Prosilica GT 1290C: \url{https://www.alliedvision.com/en/products/cameras/detail/1290-1.html}} is an industrial camera manufactured by the company Allied Vision (see Figure \ref{fig:prosilica_gt1290c_flir_ptud4670}). It is an RGB camera equipped with CCD sensor (type 1/3'') with the resolution of $1280 \times 960$ px and support for $33.3$ FPS and it communicates through gigabit Ethernet \cite{Prosilica_gt1290c}. What is important, the camera natively supports the Precision Time Protocol (\gls{ptp}) for precise time synchronization which is a crucial feature in each application relying on stereo vision and it is capable of time synchronization among devices within the range of nanoseconds \cite{PTP}. The manufacturer claims that Prosilica GT 1290C achieves the synchronization precision of $1~\mu s$.
 
@@ -801,7 +801,7 @@ where $fd_{dim_{n}}$ is the coordinate of maximal intensity $F_{max_{n}}$ of the
 %.........................................................................
 \subsection{2D Motion Prediction and Regulation} \label{txt:2d_motion_prediction_and_regulation}
 
-In order not to loose the moving target from the field of view the manipulator has to rotate the camera around both azimuthal and elevation axis appropriately. The most straightforward approach would be to simply measure the angular distance between the current measurement (i.e. the projection of the target to the image plane) and the center of the image and instruct the manipulator to move so as to minimize this distance as fast as possible. However, this approach is not sufficient. 
+In order not to lose the moving target from the field of view the manipulator has to rotate the camera around both azimuthal and elevation axis appropriately. The most straightforward approach would be to simply measure the angular distance between the current measurement (i.e. the projection of the target to the image plane) and the center of the image and instruct the manipulator to move so as to minimize this distance as fast as possible. However, this approach is not sufficient. 
 
 Contrarily, there are two main reasons why it is necessary to predict the future 2D position of the target. First, it is desirable to keep the target as close to the center of the image as possible so that there would be enough time to react in case of a sudden and rapid movement of the target. Second, the measurements are delayed (due to the tracking algorithm computation and communication delay) and the P\&T unit manifests considerable latency.
 
@@ -1073,7 +1073,7 @@ The \gls{ols} is designed to become a relatively complex system, thus it exhibit
 			support for camera Prosilica, P\&T unit Flir PTU D46-70, joystick, keyboard & packages \texttt{avt\_vimba\_camera}, \texttt{keyboard}, \texttt{joy} \\
 			distribution of computation among multiple computers & abstraction layer for distributing nodes across devices \\
 			simple data exchange among subsystems & the publisher/subscriber paradigm \cite{O'Kane201310}, support for custom message formats \\
-			real time performance & C++ implementation, intrinsic OS level parallelism (each node runs as a process) \\
+			real-time performance & C++ implementation, intrinsic OS level parallelism (each node runs as a process) \\
 			modeling and simulating the CUs & custom language \texttt{URDF}\footnotemark ~for robot modeling, integration with Gazebo \\
 			modeling a kinematic chain, heavy 3D transformations computation & native support for computing transformation between frames using package \texttt{tf} \\
 			3D visualizations & tool \texttt{rviz} for visualizing transformations, robot models, image streams, etc. \\
